--- a/config/locales/views.zh-CN.yml
+++ b/config/locales/views.zh-CN.yml
@@ -134,7 +134,7 @@
     newbie_notices: "新手提示信息（支持 HTML）"
     admin_emails: "管理员 Email，在此名单的将有管理员权限（一行一个）"
     reject_newbie_reply_in_the_evening: "禁止新手在晚上回帖"
-    node_ids_hide_in_topics_index: "要在论坛首页列表隐藏的节点,以逗号隔开"
+    node_ids_hide_in_topics_index: "要在论坛首页列表隐藏的节点，以逗号隔开"
     default_locale: "默认语言 可选值: [zh-CN, en]"
     auto_locale: "是否自动根据用户浏览器语言来切换显示语言 [true | false]"
     custom_head_html: "自定 HTML head 区域的内容"
@@ -173,7 +173,7 @@
     domain: "网站域名，默认: localhost"
     asset_host: "静态资源 CDN，比如：https://assets.your-host.com (如果没有，请留空)"
     https: "是否启用 HTTPS"
-    rack_attack: "访问频率限制，limit - 每个周期单个 IP 请求次数限制, period - 多少时间（秒）为一个请求限制周期"
+    rack_attack: "访问频率限制，limit - 每个周期单个 IP 请求次数限制， period - 多少时间（秒）为一个请求限制周期"
     github_api_key: "GitHub 登录 API key (留空禁用）"
     github_api_secret: "GitHub 登录 API secret key"
     twitter_api_key: "Twitter 登录 API key (留空禁用）"
@@ -181,6 +181,9 @@
     wechat_api_key: "微信登录 API key (留空禁用）"
     wechat_api_secret: "微信登录 API secret key"
     imageproxy_url: '配置外部图片代理，利用 <a href="https://www.github.com/willnorris/imageproxy">ImageProxy</a> 来实现，例如 <code>https://imageproxy.your-host.com/1000x/</code>，留空则不启用'
+    mailer_provider: "邮件发送方式"
+    mailer_sender: "邮件的发送者，例如：no-reply@your-host.com"
+    mailer_options: '邮件参数，配置 SMTP 参数或 PostMark API KEY，参考 <a href="https://homeland.ruby-china.org/docs/configuration/mailer/">邮件服务配置</a>'
   pagination:
     next: "下一页"
     prev: "上一页"
@@ -290,20 +293,20 @@
     unbind_warning: "至少要保留一个关联账号，现在不能解绑。"
     unbind_success: "%{provider} 账号解绑成功。"
     please_be_careful: "谨慎修改"
-    be_sure_to_use_twitter_id: "此项将会影响回复信息关联,建议用 Twitter ID"
+    be_sure_to_use_twitter_id: "此项将会影响回复信息关联，建议用 Twitter ID"
     personal_information: "个人资料设置"
     edit_password: "修改密码"
     delete_this_account: "删除此账号"
-    dont_like_it: "不喜欢?"
+    dont_like_it: "不喜欢？"
     bind_another_account: "三方登陆绑定"
     click_to_unbind: "点击接触登陆绑定"
     register_user: "注册新用户"
     login: "用户名"
     suggest_using_twitter_id: "谨慎填写，以后不可修改，建议用 Twitter ID。"
     already_have_account: "已经有账号了？"
-    forget_password: "忘记了密码?"
-    not_recieve_confirm_mail: "未收到确认邮件?"
-    not_recieve_unlock_mail: "未收到解锁邮件?"
+    forget_password: "忘记了密码？"
+    not_recieve_confirm_mail: "未收到确认邮件？"
+    not_recieve_unlock_mail: "未收到解锁邮件？"
     current_have: "目前已经有"
     users_joined: "位会员加入了"
     teams_joined: "个团队加入了"
@@ -325,7 +328,7 @@
     reward_tip_html: 如果觉得我的文章对您有用，请随意打赏。您的支持将鼓励我继续创作！
     username_allows_format: 只允许数字、大小写字母、中横线、下划线。
     no_replies: 还未参与讨论。
-    no_github: 未设置 GitHub 信息.
+    no_github: 未设置 GitHub 信息。
     menu:
       topics: "话题"
       recent_reply_topics: "最近回帖"
