--- a/config/locales/admin.en.yml
+++ b/config/locales/admin.en.yml
@@ -7,6 +7,7 @@
       nodes: "Nodes"
       wiki: "Wiki"
       topics: "Topics"
+      groups: "Groups"
       replies: "Replies"
       photos: "Photos"
       comments: "Comments"
