--- a/config/locales/admin.zh-CN.yml
+++ b/config/locales/admin.zh-CN.yml
@@ -7,6 +7,7 @@
       nodes: "节点"
       wiki: "Wiki"
       topics: "话题"
+      groups: "小组"
       replies: "回复"
       photos: "图片"
       comments: "评论"
