--- a/config/locales/views.en.yml
+++ b/config/locales/views.en.yml
@@ -104,6 +104,7 @@
     uploading: "Uploading"
   menu:
     topics: "Topics"
+    groups: "Groups"
     wiki: "Wiki"
     gems: "Gems"
     users: "Users"
@@ -339,6 +340,7 @@
     no_github: No GitHub.
     menu:
       topics: "Topics"
+      groups: "Groups"
       recent_reply_topics: "Recent replies"
       like: "Likes"
       overview: "Overview"
