[andy] add locales
[andy] update css

[andy] update css

[andy] update css

[andy] update css

[andy] update css

--- a/config/locales/groups.en.yml
+++ b/config/locales/groups.en.yml
@@ -6,11 +6,13 @@
     join_group: 'Join'
     check_agreements_and_policies: 'Agree Agreements & Policies'
     welcome_to_join: 'Welcome!'
-    group_owner: 'Group Owner'
+    group_owner: ' Owner: '
     welcome_to: 'Welcome to '
     quite: 'Quite'
     join: 'Join'
-    Cancel: 'Cancel'
+    cancel: 'Cancel'
+    send: "Send"
+    default_apply: "Please enter the reason for the application, within 100 characters"
     group_type: 'Group Type'
     group_name: 'Group Name'
     group_avatar: 'Group Avatar'
@@ -24,9 +26,9 @@
     remove: 'Remove from group'
     reject: 'Refuse to join'
     create: 'Create'
-    create_details: 'Create Details'
+    create_details: 'If you want to communicate with others about a certain type of discussion, you can create a group. Groups are gathering places for people interested in the same discussion.'
     cautions: 'Cautions'
-    caution_details: 'Caution details'
+    caution_details: 'Taking into account the requirements of Chinese laws and regulations and related policies, this forum does not welcome pornographic, radical discussions, and ideological discussions, and reserves the right to disband such topic groups.'
     create_group_policy: 'Create group policy'
     new_group: 'Create New Group'
     created_at: 'Created at '
