--- a/config/locales/groups.zh-CN.yml
+++ b/config/locales/groups.zh-CN.yml
@@ -6,11 +6,13 @@
     join_group: "+ 加入小组"
     check_agreements_and_policies: "我已认真阅读并同意《社区指导原则》和《法律声明》"
     welcome_to_join: "欢迎加入!"
-    group_owner: "小组组长"
+    group_owner: " 组长:"
     welcome_to: "欢迎加入"
-    quite: "推出"
+    quite: "退出"
     join: "加入"
-    Cancel: "取消"
+    cancel: "取消"
+    send: "发送"
+    default_apply: "请输入申请理由，100字以内"
     group_type: "小组类型"
     group_name: "小组名称"
     group_avatar: "小组图标"
@@ -28,8 +30,8 @@
     cautions: "注意事项"
     caution_details: "考虑到中国法律法规和相关政策的要求，本论坛不欢迎色情、激进讨论、意识形态方面的讨论，并保留解散这类主题小组的权利。"
     create_group_policy: "小组需要审核通过后才能完成创建，审核结果会用站内信通知你，请耐心等待。"
-    new_group: "创建小组"
-    created_at: "Created at "
+    new_group: "+ 申请创建小组"
+    created_at: "创建于 "
     people_in_this_group: " 人聚集在这个小组"
     invite_friends: "> 邀请好友"
     group_management: "> 小组管理"
