[andy] add group manage modal

--- a/config/locales/groups.en.yml
+++ b/config/locales/groups.en.yml
@@ -61,3 +61,9 @@
     join_to_post_topic: "No topic in this group, join to create a new topic!"
     post_topic: "No topic in this group, create a new topic!"
     join_to_review: "Private group requires joining to view topics."
+    confirm_approve: "Approve to join?"
+    confirm_upgrade: "Promote as group admin?"
+    confirm_owner_transfer: "Transfer ownership?"
+    confirm_downgrade: "Downgrade as member?"
+    confirm_remove: "Remove from group?"
+    confirm_reject: "Decline application?"
