--- a/config/locales/groups.zh-CN.yml
+++ b/config/locales/groups.zh-CN.yml
@@ -61,3 +61,9 @@
     join_to_post_topic: "小组没有讨论，加入并发布讨论"
     post_topic: "小组没有讨论，发布讨论"
     join_to_review: "私密小组需要加入才能浏览内容"
+    confirm_approve: "允许加入小组？"
+    confirm_upgrade: "升级为管理员？"
+    confirm_owner_transfer: "转移小组组长权限？"
+    confirm_downgrade: "降级为小组成员？"
+    confirm_remove: "从小组移除？"
+    confirm_reject: "拒绝加入小组？"
