[andy] fixed iussues and create group user notification

--- a/config/locales/groups.en.yml
+++ b/config/locales/groups.en.yml
@@ -56,8 +56,11 @@
       fourth_line: "- Can be updated as public"
     private_group_caution: "This is a private group and invitation required"
     confirm_quite: "Confirm to quite group"
-    confirm: "Quite"
+    confirm_quite_button: "Quite"
+    confirm: "Confirm"
     owner_quite_forbidden: "Transfer ownership before quite"
+    quite_group_success: "Quite group successfully"
+    cancel_apply_success: "Withdraw successfully"
     join_to_post_topic: "No topic in this group, join to create a new topic!"
     post_topic: "No topic in this group, create a new topic!"
     join_to_review: "Private group requires joining to view topics."
