--- a/config/locales/groups.zh-CN.yml
+++ b/config/locales/groups.zh-CN.yml
@@ -56,8 +56,11 @@
       fourth_line: "- 以后可以变为公开的小组"
     private_group_caution: "这是一个私密小组，只有受邀请的用户才能加入"
     confirm_quite: "真的要退出小组吗？"
+    confirm_quite_button: "确定"
     confirm: "确定"
     owner_quite_forbidden: "小组组长需要转让组长权限才能退出"
+    quite_group_success: "成功退出小组"
+    cancel_apply_success: "成功取消加入申请"
     join_to_post_topic: "小组没有讨论，加入并发布讨论"
     post_topic: "小组没有讨论，发布讨论"
     join_to_review: "私密小组需要加入才能浏览内容"
