--- a/config/locales/groups.zh-CN.yml
+++ b/config/locales/groups.zh-CN.yml
@@ -70,3 +70,8 @@
     confirm_downgrade: "降级为小组成员？"
     confirm_remove: "从小组移除？"
     confirm_reject: "拒绝加入小组？"
+    apply_join_html: "%{actor}申请加入小组: %{target}"
+    approved_join_html: "%{actor}批准了你在小组%{target}的加入申请"
+    owner_transfer_html: "%{actor}已将小组%{target}转移给你"
+    upgrade_html: "%{actor}将你晋升为小组%{target}的管理员"
+    expired: "内容已过期"
