[andy] add group user notification service

--- a/config/locales/groups.en.yml
+++ b/config/locales/groups.en.yml
@@ -70,8 +70,9 @@
     confirm_downgrade: "Downgrade as member?"
     confirm_remove: "Remove from group?"
     confirm_reject: "Decline application?"
-    apply_join_html: "%{actor} apply to join group: %{target}"
-    approved_join_html: "%{actor} approved your group: %{target} join request"
-    owner_transfer_html: "%{actor} transfered group: %{target} ownership to you"
-    upgrade_html: "%{actor} upgraded you as group: %{target} admin"
+    apply_join_html: "%{actor} apply to join group: %{second_target}"
+    approved_by_html: "%{actor} was approved to join group: %{second_target} by %{receiver}"
+    approved_join_html: "%{actor} approved your group: %{second_target} join request"
+    owner_transfer_html: "%{actor} transfered group: %{second_target} ownership to you"
+    upgrade_html: "%{actor} upgraded you as group: %{second_target} admin"
     expired: "Expired"
