--- a/config/locales/groups.zh-CN.yml
+++ b/config/locales/groups.zh-CN.yml
@@ -70,8 +70,9 @@
     confirm_downgrade: "降级为小组成员？"
     confirm_remove: "从小组移除？"
     confirm_reject: "拒绝加入小组？"
-    apply_join_html: "%{actor}申请加入小组: %{target}"
-    approved_join_html: "%{actor}批准了你在小组%{target}的加入申请"
-    owner_transfer_html: "%{actor}已将小组%{target}转移给你"
-    upgrade_html: "%{actor}将你晋升为小组%{target}的管理员"
+    approved_by_html: "%{receiver}已批准%{actor}加入小组: %{second_target}"
+    apply_join_html: "%{actor}申请加入小组: %{second_target}"
+    approved_join_html: "%{actor}批准了你在小组%{second_target}的加入申请"
+    owner_transfer_html: "%{actor}已将小组%{second_target}转移给你"
+    upgrade_html: "%{actor}将你晋升为小组%{second_target}的管理员"
     expired: "内容已过期"
