--- a/config/locales/views.zh-CN.yml
+++ b/config/locales/views.zh-CN.yml
@@ -232,6 +232,7 @@
     create_topic_success: "话题创建成功。"
     delete_topic_success: "话题删除成功。"
     update_topic_success: "话题修改成功。"
+    option_number_validation: "至少需要一个投票选项"
     reply_success: "回复成功。"
     reply_this_floor: "回复此楼"
     topic_was_deleted: "[该话题已被删除]"
@@ -269,6 +270,11 @@
       markdown_guides: 排版说明
       poll_title_placeholder: 在这输入投票标题
       option_name: 在这里输入选项
+      add_option: + 添加选项
+      select_type: 选择方式
+      single: 单选
+      multiple: 多选
+      ends_at: 结束时间
     menu:
       pin: 置顶话题
       unpin: 取消话题置顶
