--- a/config/locales/views.en.yml
+++ b/config/locales/views.en.yml
@@ -268,6 +268,9 @@
       single: Single
       multiple: Multiple
       ends_at: End at
+      starts_at: Start at
+      show_join_list: Show joined users list
+      need_approvement_to_join: Need approvement to join
     menu:
       pin: Pin
       unpin: Unpin
