[andy] fixed topic create issue

--- a/config/locales/groups.en.yml
+++ b/config/locales/groups.en.yml
@@ -77,3 +77,10 @@
     upgrade_html: "%{actor} upgraded you as group: %{second_target} admin"
     expired: "Expired"
     join_requirement: "Join group to create a new topic here."
+    waiting_approve: "Waiting approve"
+    reject_group: "Reject application"
+    approve_group: "Approve application"
+    restore_group: "Restore Group"
+    reject_success: "Declined group application"
+    approved_success: "Approved group application successfully"
+    restore_success: "Restored group application successfully"
