--- a/config/locales/groups.zh-CN.yml
+++ b/config/locales/groups.zh-CN.yml
@@ -77,3 +77,10 @@
     upgrade_html: "%{actor}将你晋升为小组%{second_target}的管理员"
     expired: "内容已过期"
     join_requirement: "加入小组才能发表新话题"
+    waiting_approve: "等待审批"
+    reject_group: "拒绝创建申请"
+    approve_group: "同意创建申请"
+    restore_group: "恢复小组"
+    rejected_success: "已拒绝小组创建申请"
+    approved_success: "同意小组审批申请"
+    restored_success: "成功恢复小组"
