can check email is available before register

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -85,3 +85,4 @@ en:
         body: "Content"
         locked: "Lock"
         change_desc: "Change Description"
+  email_is_not_available: "Email is not available, please try another one."
